# AIA_Ollama_Basic_Orchestrator

./: .gitignore  Gemma_Orchestra.md  README.md  api_client.py  config.py  context_manager.py  context_summarizer.py  conversation_store.py  db_logger.py  llm_provider.py  logs.db  main.py  mcp_client.py  pyproject.toml  rag_service.py  test_tss_udp.py  tss_udp_client.py
lancedb/knowledge_base.lance/_transactions/: 0-da5a00fb-ff91-4e2f-85dc-ba5a39f4b4fc.txn  1-3dfc33e4-bfeb-4934-a80a-fa7ebd55ebe4.txn
lancedb_test/test.lance/_transactions/: 0-92cea655-c95a-4e3d-9342-775e78f003dd.txn
mcp_servers/: sqlite_query_server.py  telemetry_search_server.py  tss_tools_server.py
tests/: test_api_client.py  test_revamp.py
tokenizer_cache/google--gemma-4-26B-A4B-it/: tokenizer_config.json
